# pathmodel

./: .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  CONTRIBUTORS.md  CompoundPrediction.lp  PathModel.lp  README.rst  ReactionCreation.lp  data.lp  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
conda/: dockerfile  pathmodel_env.yaml
conda/package/: build.sh  meta.yaml
data/: MAA_pwy.lp  data.lp  mycosporine_pwy_7751.lp  new_sterol.lp  sterol_pwy.lp  sterol_pwy_2541.lp
pathmodel/: __init__.py  __main__.py  data.lp  path_creation.py  pathmodel_wrapper.py  plotting.py  sterol_pwy_2541.lp  test_data_melanin.lp  wrapping_PathModel.py
pathmodel/asp/: CompareMolecules.lp  MZComputation.lp  PathModel.lp  ReactionCreation.lp  ReactionSiteExtraction.lp
pathmodel/data/: MAA_pwy.lp  brown_sterols_pwy.lp  mozukulins_pwy.lp  new_sterol.lp  oxylipins_pwy.lp  oxylipins_pwy.lp.txt  sterol_pwy.lp
pathmodel/plotting/: molecule_creation.py  path_creation.py
test/: PathModel.lp  ReactionCreation.lp  data.lp  data_result.lp  mz_computation.lp  pathmodel_test_data.lp  result.lp  test-reaction-creation.lp  test_MZComputation.py  test_mzComputation.py  test_pathmodel.py  test_pathmodel_wrapper.py  test_wrapping_PathModel.py  wrapping_PathModel.py
test/.pytest_cache/v/cache/: nodeids
test/test_data/: mz_computation.lp  pathmodel.lp
