[metadata]
name = pathmodel
version = 0.1.3.7a1
description = Ab initio pathway inference
long_description = file: README.rst
author = Arnaud Belcour
author_email = arnaud.belcour@gmail.com
url = https://gitlab.inria.fr/DYLISS/PathModel
classifiers =
        Development Status :: 3 - Alpha
        Intended Audience :: Science/Research
        Intended Audience :: Developers
        Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = pathmodel
install_requires =
    clyngor
    matplotlib
    networkx

[options.entry_points]
console_scripts =
    pathmodel = pathmodel.__main__:main

[zest.releaser]
create-wheel = yes
python-file-with-version = pathmodel/__init__.py